--- a/LDAconversational.ipynb
+++ b/LDAconversational.ipynb
@@ -6,6 +6,7 @@
       "name": "LDAconversational.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,21 +30,21 @@
       "metadata": {
         "id": "lcfC5qxQfkVY",
         "colab_type": "code",
+        "outputId": "c5eb53a1-753f-4123-819a-869b2ae8a2dc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
-        },
-        "outputId": "aa4b2e60-ddbd-4fa7-f436-0378a78a87ca"
+          "height": 87
+        }
       },
       "source": [
         "import nltk\n",
         "nltk.download('stopwords')\n",
         "nltk.download('wordnet')\n",
-        "doc1 = \"Sugar is bad to consume. My sister likes to have sugar, but not my father.\"\n",
-        "doc2 = \"My father spends a lot of time driving my sister around to dance practice.\"\n",
-        "doc3 = \"Doctors suggest that driving may cause increased stress and blood pressure.\"\n",
-        "doc4 = \"Sometimes I feel pressure to perform well at school, but my father never seems to drive my sister to do better.\"\n",
-        "doc5 = \"Health experts say that Sugar is not good for your lifestyle.\"\n",
+        "doc1 = \"A total of 1,200 new patients infected with mosquito-borne disease dengue were admitted to different hospitals.\"\n",
+        "doc2 = \"The DGHS asked them to turn bowls, trays or kitchen pots upside down before they leave and cover water tanks. \"\n",
+        "doc3 = \"The education ministry is also worried about the holidays. Education institutions will remain closed for 12 days.\"\n",
+        "doc4 = \"Effective insecticide will arrive in Dhaka within two to four days.\"\n",
+        "doc5 = \"It is characterised by flu-like symptoms, including piercing headaches, muscle and joint pains, fever and fullbody rashes. But this year it shows “atypical” symptoms affecting brain, heart, and liver.\"\n",
         "\n",
         "# compile documents\n",
         "doc_complete = [doc1, doc2, doc3, doc4, doc5]\n",
@@ -77,7 +78,7 @@
         "# Running and Trainign LDA model on the document term matrix.\n",
         "ldamodel = Lda(doc_term_matrix, num_topics=3, id2word = dictionary, passes=50)\n"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,21 +97,21 @@
       "metadata": {
         "id": "Pswhc35tiqGt",
         "colab_type": "code",
+        "outputId": "cb951821-5c25-4a61-abb3-ae3ce74f22fb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
-        },
-        "outputId": "6a766580-6eeb-475f-cab1-99b4d7b452ca"
+        }
       },
       "source": [
-        "print(ldamodel.print_topics(num_topics=3, num_words=3))"
+        "print(ldamodel.print_topics(num_topics=6, num_words=3))"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[(0, '0.099*\"sugar\" + 0.069*\"sister\" + 0.069*\"father\"'), (1, '0.056*\"sister\" + 0.056*\"father\" + 0.056*\"pressure\"'), (2, '0.065*\"driving\" + 0.064*\"pressure\" + 0.064*\"may\"')]\n"
+            "[(0, '0.042*\"pot\" + 0.042*\"leave\" + 0.042*\"upside\"'), (1, '0.040*\"symptom\" + 0.023*\"piercing\" + 0.023*\"headache\"'), (2, '0.076*\"education\" + 0.044*\"day\" + 0.043*\"ministry\"')]\n"
           ],
           "name": "stdout"
         }
